tests/programs/symex/a5-test-cases/pass/symex_control_pass1.rice
// symex
#[symex]
fn example(x: int) {
  if x > 0 {
    assert(x + 1 > 1)
  }
}