tests/programs/symex/a5-test-cases/fail/symex_nested_tuple_fail.rice
// symex
#[symex]
fn example(x: ((((int,),),),),) {
  assert((((x.0).0).0).0 > 0)
}